group page and groupPost panel added